<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gaurav.bmic.main"
    android:background="#9294ec">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/name"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_your_name_please"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#ffffff"
        android:textSize="22sp"
        android:visibility="visible"
        android:layout_centerHorizontal="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff"
        android:layout_below="@id/name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/ageandsex"
        android:visibility="visible"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/gender"
            android:layout_width="132dp"
            android:layout_height="45dp"
            android:inputType="textCapCharacters"
            android:maxLength="1"
            android:hint="@string/sex"
            android:textColorHint="#ffffff"
            android:textSize="22sp"
            android:fontFamily="sans-serif"
            android:textColor="#000000"
            android:background="@android:color/transparent"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:layout_margin="10dp"
            android:id="@+id/v0"/>

        <EditText
            android:id="@+id/age"
            android:layout_width="150dp"
            android:layout_height="46dp"
            android:hint="@string/age"
            android:inputType="number"
            android:maxLength="2"
            android:layout_marginStart="20dp"
            android:textColorHint="#ffffff"
            android:textSize="22sp"
            android:fontFamily="sans-serif"
            android:textColor="#000000"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff"
        android:layout_below="@id/ageandsex"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weight"
        android:layout_below="@+id/ageandsex"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:padding="5dp">

        <EditText
            android:id="@+id/weight1"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:fontFamily="sans-serif"
            android:inputType="numberDecimal"
            android:hint="@string/weight"
            android:textColorHint="#ffffff"
            android:textSize="22sp"
            android:textColor="#000000"
            android:visibility="visible"
            android:background="@android:color/transparent" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:layout_margin="10dp"
            android:id="@+id/v"/>

        <Spinner
            android:id="@+id/weight_units_spinner"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:prompt="@string/_units"
            android:entries="@array/weight_units">

        </Spinner>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff"
        android:layout_below="@id/weight"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weight"
        android:id="@+id/height"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_centerHorizontal="true"
        android:padding="5dp">

        <EditText
            android:id="@+id/height1"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:fontFamily="sans-serif"
            android:inputType="numberDecimal"
            android:hint="@string/height_in_m"
            android:textColorHint="#ffffff"
            android:textSize="22sp"
            android:textColor="#000000"
            android:visibility="visible"
            android:background="@android:color/transparent"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:layout_margin="10dp"
            android:id="@+id/v2"/>

        <Spinner
            android:id="@+id/length_units_spinner"
            android:layout_width = "170dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:prompt="@string/_units"
            android:entries="@array/length_units">

        </Spinner>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff"
        android:layout_below="@id/height"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="50dp"
        android:id="@+id/lv"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/reset"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:visibility="visible"
        android:layout_above="@+id/BMIL"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="#4956f9"
        android:onClick="Reset" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BMIL"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/BMI"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/get_your_bmi_score"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:visibility="visible"
            android:layout_marginBottom="7dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="#4956f9"/>

    </LinearLayout>



</RelativeLayout>
