<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".result1525"
    android:id="@+id/master">

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grad"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/circleBorder">

            <ImageView
                android:id="@+id/image"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_margin="9dp"
                android:padding="3dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image"
                android:background="@drawable/circle"/>

            <ImageButton
                android:id="@+id/camera"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:src="@drawable/camera"
                android:scaleType="centerCrop"
                android:layout_alignEnd="@id/image"
                android:layout_alignBottom="@id/image"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/imgUser"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv1"
                android:text="@string/gaurav_kumar"
                android:textSize="28sp"
                android:textColor="#FFFFFF"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv2"
                    android:text="@string/m"
                    android:textSize="26sp"
                    android:textColor="#FFFFFF"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:background="#FFFFFF"
                    android:layout_toEndOf="@id/tv2"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv3"
                    android:text="@string/_19"
                    android:textSize="26sp"
                    android:layout_toEndOf="@id/tv2"
                    android:layout_marginStart="26dp"
                    android:textColor="#FFFFFF"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linlay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rellay1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/followersBg"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:id="@+id/tv6"
                    android:text="@string/bmi"
                    android:textSize="26sp"
                    android:textColor="#FFFFFF"
                    android:background="@android:color/transparent"/>


                <View
                    android:layout_width="50dp"
                    android:layout_height="1dp"
                    android:background="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_23_2"
                    android:textSize="36sp"
                    android:id="@+id/tv7"/>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/followingBg"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:id="@+id/tv8"
                    android:text="@string/ideal_weight"
                    android:textSize="26sp"
                    android:textColor="#ffffff" />

                <View
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:background="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_23_2_kg"
                    android:textSize="36sp"
                    android:textColor="#11ff00"
                    android:id="@+id/tv9"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linlay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linlay1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/followingBg2"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:id="@+id/tv10"
                    android:text="@string/weight_loss"
                    android:textSize="26sp"
                    android:textColor="#FFFFFF"
                    android:background="@android:color/transparent"/>


                <View
                    android:layout_width="70dp"
                    android:layout_height="1dp"
                    android:background="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_23_2"
                    android:textSize="36sp"
                    android:id="@+id/tv11"/>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/followersBg2"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:id="@+id/tv12"
                    android:text="@string/fat"
                    android:textSize="26sp"
                    android:textColor="#ffffff"
                    android:background="@android:color/transparent"/>

                <View
                    android:layout_width="70dp"
                    android:layout_height="1dp"
                    android:background="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_23_2"
                    android:textSize="36sp"
                    android:id="@+id/tv13" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linlay2"
        android:background="@drawable/grad2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:background="#078ad2"
                android:layout_margin="10dp"
                android:text="Share"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:id="@+id/share"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:background="#19cede"
                android:layout_margin="10dp"
                android:text="Download"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:id="@+id/download"/>



        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>